...
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.4"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		
		<com.facebook.drawee.view.SimpleDraweeView
			android:id="@+id/moviePosterSimpleDraweeView"
			posterURL="@{movie.posterURL}"
			android:layout_width="@dimen/match_constraints"
			android:layout_height="@dimen/match_constraints"
			android:scaleType="fitXY"
			android:transitionName="moviePosterView"
			app:fadeDuration="500"
...
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/genresTextView"
			tools:text="In the latest chapter of MCU's Spider-Man series, our friendly neighborhood superhero"/>
		
		<FrameLayout
			android:id="@+id/movieVideoFrameLayout"
			android:layout_width="@dimen/match_constraints"
			android:layout_height="@dimen/match_constraints"
			app:layout_constraintBottom_toTopOf="@id/movieDetailsGuideline"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
...
